--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,17 @@
 language: node_js
-
 node_js:
-  - "10.9.0"
+  - 10.9.0
 
 cache: npm
 
 before_install:
+  - ls -la
+  - pwd
+  - mkdir public
+  - cd public
+  - ls -la
+  
+install:
+  - ls -la
+  - npm install
   - ls -la
