--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,14 @@ language: node_js
 node_js:
   - "10.9.0"
 
-cache: npm
+env:
+  - NOW_TOKEN=OOr2gJkrXfetFB0lmWfeGxCh
 
-before_install:
-  - ls -la
-  - mkdir public
-  # cd public
-  - ls -la
+cache: npm
   
 install:
-  - ls -la
   - npm install
-  - ls -la
+
+script:
+  - npm run build
+  - npm run test
